docs/v5.0.0/_sources/gallery/validation/internal/core_shell_empty_shell.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/validation/internal/core_shell_empty_shell.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_validation_internal_core_shell_empty_shell.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_validation_internal_core_shell_empty_shell.py:


Effect of Shell dimensions in equivalent medium
===============================================

.. GENERATED FROM PYTHON SOURCE LINES 6-51

.. code-block:: Python


    # Standard library imports
    import numpy as np
    import matplotlib.pyplot as plt
    from PyMieSim.units import ureg

    # PyMieSim imports
    from PyMieSim.experiment.scatterer_set import CoreShellSet
    from PyMieSim.experiment.source_set import GaussianSet
    from PyMieSim.experiment.polarization_set import PolarizationSet
    from PyMieSim.experiment import Setup

    # Setup parameters
    scatterer_diameter = 0.3 * ureg.micrometer  # Diameter of the scatterer in meters
    scatterer_index = 1.4  # Refractive index of the scatterer
    source_wavelength = 1.2 * ureg.micrometer  # Wavelength of the source in meters

    polarization_set = PolarizationSet(
        angles=[0, 90] * ureg.degree,
    )

    # Experiment source and scatterer setup
    source = GaussianSet(
        wavelength=[1200] * ureg.nanometer,
        polarization=polarization_set,
        optical_power=[1] * ureg.watt,
        numerical_aperture=[0.2],
    )

    scatterer = CoreShellSet(
        core_diameter=[300] * ureg.nanometer,
        shell_thickness=np.linspace(100, 300, 100) * ureg.nanometer,
        core_material=[1.4],
        shell_material=[1.3],
        medium=[1.3],
    )


    experiment = Setup(scatterer_set=scatterer, source_set=source)

    dataframe = experiment.get("Csca")

    figure = dataframe.plot(x="scatterer:shell_thickness")





.. image-sg:: /gallery/validation/internal/images/sphx_glr_core_shell_empty_shell_001.png
   :alt: core shell empty shell
   :srcset: /gallery/validation/internal/images/sphx_glr_core_shell_empty_shell_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 52-54

As it is supposed the scattering Cross-section should not be affected by
the shell thickness as it's refractive index is same as the surrounding medium.

.. GENERATED FROM PYTHON SOURCE LINES 54-59

.. code-block:: Python

    dataframe = experiment.get("Qsca")

    figure = dataframe.plot(x="scatterer:shell_thickness")

    # Similarly the scattering decrease as the scatterer becomes technically larger but the effects of the shell is for no account.



.. image-sg:: /gallery/validation/internal/images/sphx_glr_core_shell_empty_shell_002.png
   :alt: core shell empty shell
   :srcset: /gallery/validation/internal/images/sphx_glr_core_shell_empty_shell_002.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.375 seconds)


.. _sphx_glr_download_gallery_validation_internal_core_shell_empty_shell.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: core_shell_empty_shell.ipynb <core_shell_empty_shell.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: core_shell_empty_shell.py <core_shell_empty_shell.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: core_shell_empty_shell.zip <core_shell_empty_shell.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
